@@ -2,8 +2,9 @@ cryptsetup (2:1.0.7-3) unstable; urgency=low
 
   * NOT RELEASED YET
   * remove 04_no_stderr_success.patch again.
+  * update patches to comply with DEP-3 (http://dep.debian.net/deps/dep3/)
 
- -- Jonas Meurer <mejo@debian.org>  Thu, 17 Sep 2009 16:40:18 +0200
+ -- Jonas Meurer <mejo@debian.org>  Thu, 17 Sep 2009 16:53:01 +0200
 
 cryptsetup (2:1.0.7-2) unstable; urgency=low
 
